# ucreator

./: .editorconfig  Cargo.toml  LICENSE  README.md  build.rs
engine/: Cargo.toml
engine/crates/any/: Cargo.toml
engine/crates/any/src/: lib.rs  type_info.rs  vec.rs
engine/crates/cell/: Cargo.toml
engine/crates/cell/src/: lib.rs
engine/crates/core/: Cargo.toml
engine/crates/core/src/: app.rs  lib.rs
engine/crates/ecs/: Cargo.toml
engine/crates/ecs/macros/: Cargo.toml
engine/crates/ecs/macros/src/: lib.rs
engine/crates/ecs/src/: archetype.rs  command.rs  commands.rs  component.rs  data.rs  entity.rs  error.rs  filter.rs  group.rs  lib.rs  query.rs  storage.rs  system.rs  world.rs
engine/crates/ecs/src/archetype/: archetype.rs  archetype_id.rs  archetypes.rs  mod.rs
engine/crates/ecs/src/bundle/: bundle.rs  bundle_inserter.rs  mod.rs
engine/crates/ecs/src/component/: bundle.rs  component.rs  component_id.rs  component_info.rs  (+4 more)
engine/crates/imgui/: Cargo.toml
engine/crates/imgui/src/: lib.rs
engine/crates/macro/: Cargo.toml
engine/crates/macro/src/: lib.rs
engine/crates/render/: Cargo.toml
engine/crates/render/src/: lib.rs  window.rs
engine/crates/rendering/: Cargo.toml
engine/crates/rendering/src/: window.rs
engine/crates/utils/: Cargo.toml
engine/crates/utils/macros/: Cargo.toml
engine/crates/utils/src/: fs.rs  lib.rs  tuple.rs
engine/src/: core.rs  ecs.rs  lib.rs  render.rs  utils.rs
engine/src/ecs/: data.rs  error.rs  filter.rs  mod.rs  storage.rs  world.rs
engine/src/log/: mod.rs
engine/src/utils/: mod.rs  tuple.rs
(+42 files in other folders)
