[package]
name = "UCreator"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["engine", "engine/crates/*", "editor"]

[dependencies]
uengine = { path = "engine" }
ueditor = { path = "editor" }
syn = { version = "2.0", features = ["full"] }
eframe = { version = "0.27.2", default-features = false, features = ["default_fonts", "glow", "persistence"] }
egui_dock = "0.12"
